--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^2.2.0
   intl: ^0.20.2
   go_router: ^15.2.3
+  flutter_map: ^8.1.1
 
 dev_dependencies:
   flutter_test:
