--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
 
   # UI dependencies
   cupertino_icons: ^1.0.8
+  lottie: ^3.3.1
 
   # Network dependencies
   dio: ^5.8.0+1
@@ -47,6 +48,7 @@ dependencies:
   #utils
   fluttertoast: ^8.2.12
   flutter_svg: ^2.2.0
+  logger: ^2.6.0
 
   # Internationalization dependencies
   intl: ^0.20.2
@@ -57,6 +59,13 @@ dependencies:
   # Map dependencies
   flutter_map: ^8.1.1
   flutter_map_cancellable_tile_provider: ^3.1.0
+
+  #location dependencies
+  geolocator: ^14.0.1
+
+  #state management
+  riverpod: ^2.6.1
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +95,8 @@ flutter:
     - assets/icons/svg/
     - assets/images/png/
     - assets/images/svg/
+    - assets/gifs/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
