--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_svg: ^2.2.0
   logger: ^2.6.0
   pretty_dio_logger: ^1.4.0
+  url_launcher: ^6.3.1
+  flutter_launcher_icons: ^0.14.4
 
   # Internationalization dependencies
   intl: ^0.20.2
