--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   url_launcher: ^6.3.1
   flutter_launcher_icons: ^0.14.4
+  cached_network_image: ^3.4.1
+  flutter_cache_manager: ^3.4.1
 
   # Internationalization dependencies
   intl: ^0.20.2
